--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,8 @@
 :root {
-    --primary-color: #1B1725;
-    --secondary-color: #534B62;
-    --third-color: #34E4EA;
-    --tertiary-color: #FF3CC7;
+    --primary-color: #272D2D;
+    --secondary-color: #23CE6B;
+    --third-color: #CEC2FF;
+    --tertiary-color: #B3B3F1;
     --delete-color: #A30B37;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -22,6 +22,10 @@
     flex-direction: column;
     align-items: center;
     
+}
+
+.header {
+    text-align: center;
 }
 
 h1 {
@@ -48,6 +52,7 @@ h2 {
 
 .todo:hover {
     opacity: 0.8;
+    transition: 0.4s;
 }
 
 .todo-text {
@@ -61,6 +66,7 @@ h2 {
     background-color: var(--primary-color);
     border-radius: 999px;
     margin-right: 1rem;
+    transition: 0.4s;
 }
 
 .delete-todo {
@@ -80,7 +86,8 @@ h2 {
 }
 
 .todo.is-completed .todo-checkbox {
-    background: linear-gradient(var(--third-color), var(--tertiary-color));
+    background-color: var(--primary-color);
+    background: linear-gradient(to bottom, var(--third-color), var(--tertiary-color));
 }
 
 .todo.is-completed .todo-text {
@@ -136,4 +143,52 @@ h2 {
 
 .add-todo.hidden {
     display: none;
+}
+
+.login {
+    /* background-color: var(--primary-color); */
+    /* color: var(--secondary-color); */
+    height: 100vh;
+    width: 100vw;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.login-form {
+    /* background-color: red; */
+    width: 35vw;
+    height: 25vh;
+    border-radius: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.login-form input {
+    width: 100%;
+    height: 20%;
+    border: none;
+    background-color: var(--secondary-color);
+    color: white;
+    font-size: 1.3rem;
+    outline: none;
+    border-radius: 50px;
+    text-align: center;
+}
+
+.login-form button {
+    width: 100%;
+    height: 20%;
+    border: none;
+    background-color: var(--tertiary-color);
+    color: white;
+    font-size: 1.3rem;
+    outline: none;
+    border-radius: 50px;
+    cursor: pointer;
+
 }
