--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,77 +21,18 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* justify-content: center; */
     
 }
 
-.header {
-    text-align: center;
-}
 
-h1 {
-    font-size: 2.5rem;
-    color: white;
-}
 
-h2 {
-    margin-bottom: 1rem;
-}
-
-.todo {
-    position: relative;
-    background-color: var(--secondary-color);
-    padding: 1rem;
-    border-radius: 1rem;
-    margin-bottom: 1rem;
-    cursor: pointer;
+.app-log-reg {
     display: flex;
     align-items: center;
-    width: 50vw;
-
-}
-
-.todo:hover {
-    opacity: 0.8;
-    transition: 0.4s;
-}
-
-.todo-text {
-    color: white;
-    font-size: 1.3rem;
-}
-
-.todo-checkbox {
-    width: 20px;
-    height: 20px;
-    background-color: var(--primary-color);
-    border-radius: 999px;
-    margin-right: 1rem;
-    transition: 0.4s;
-}
-
-.delete-todo {
-    position: absolute;
-    /* top: 50; */
-    right: 16px;
-    color: white;
-    cursor: pointer;
-    width: 16px;
-    height: 16px;
-    background-color: var(--delete-color);
-    border-radius: 999px;
-    display: flex;
     justify-content: center;
-    align-items: center;
-    padding: 5px;
-}
-
-.todo.is-completed .todo-checkbox {
-    background-color: var(--primary-color);
-    background: linear-gradient(to bottom, var(--third-color), var(--tertiary-color));
-}
-
-.todo.is-completed .todo-text {
-    text-decoration: line-through;
+    height: 90vh;
+    width: 100vw;
 }
 
 .add-todo {
@@ -128,67 +69,22 @@ h2 {
 
 .add-todo-button {
     position: absolute;
-    bottom: 0;
-    right: 0;
-    background: linear-gradient(var(--tertiary-color), var(--third-color));
+    bottom: 50px;
+    right: 50px;
+    background: linear-gradient(var(--secondary-color), var(--third-color));
     color: white;
-    font-size: 1.3rem;
     outline: none;
     border: none;
-    border-radius: 50px;
+    border-radius: 50%;
     cursor: pointer;
-    padding: 1rem;
-    margin: 1rem;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .add-todo.hidden {
     display: none;
 }
 
-.login {
-    /* background-color: var(--primary-color); */
-    /* color: var(--secondary-color); */
-    height: 100vh;
-    width: 100vw;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.login-form {
-    /* background-color: red; */
-    width: 35vw;
-    height: 25vh;
-    border-radius: 50px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.login-form input {
-    width: 100%;
-    height: 20%;
-    border: none;
-    background-color: var(--secondary-color);
-    color: white;
-    font-size: 1.3rem;
-    outline: none;
-    border-radius: 50px;
-    text-align: center;
-}
-
-.login-form button {
-    width: 100%;
-    height: 20%;
-    border: none;
-    background-color: var(--tertiary-color);
-    color: white;
-    font-size: 1.3rem;
-    outline: none;
-    border-radius: 50px;
-    cursor: pointer;
-
-}
