--- a/client/src/App.css
+++ b/client/src/App.css
@@ -88,3 +88,21 @@
     display: none;
 }
 
+@media screen and (max-width: 768px) {
+
+    .App {
+        padding: 0;
+    }
+
+    .app-log-reg {
+        width: 80%;
+        margin-top: 2rem;
+    }
+
+    .add-todo {
+        width: 80%;
+        height: 25vh;
+        border-radius: 50px;
+    }
+}
+
