--- a/client/src/component/register/register.css
+++ b/client/src/component/register/register.css
@@ -10,6 +10,21 @@
     justify-content: center;
 }
 
+.register h1 {
+    font-size: 3rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+}
+
+.register h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    text-transform: uppercase;
+    color: gray;
+}
+
 .register-form {
     /* background-color: red; */
     width: 70%;
@@ -24,12 +39,10 @@
 .register-form input {
     width: 100%;
     height: 20%;
-    border: none;
-    background-color: var(--secondary-color);
-    color: white;
+    border: solid 1px black;
+    color: black;
     font-size: 1.3rem;
     outline: none;
-    border-radius: 50px;
     text-align: center;
 }
 
@@ -37,13 +50,18 @@
     width: 100%;
     height: 20%;
     border: none;
-    background-color: var(--tertiary-color);
+    background-color: black;
     color: white;
     font-size: 1.3rem;
     outline: none;
-    border-radius: 50px;
     cursor: pointer;
+    transition: 0.3s;
+}
 
+.register-form button:hover {
+    background-color: white;
+    color: black;
+    border: solid 1px black;
 }
 
 @media screen and (max-width: 768px) {
