--- a/client/src/component/login/login.css
+++ b/client/src/component/login/login.css
@@ -15,6 +15,9 @@
     font-weight: bold;
     margin-bottom: 1rem;
     text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
 }
 
 .login h2 {
